@@ -1,26 +1,26 @@
 package org.delcom.app.services;
 
+import org.delcom.app.entities.WatchList;
+import org.delcom.app.repositories.WatchListRepository;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-
-import org.delcom.app.entities.WatchList;
-import org.delcom.app.repositories.WatchListRepository;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-public class WatchListServiceTests {
+@ExtendWith(MockitoExtension.class)
+class WatchListServiceTests{
 
     @Mock
     private WatchListRepository watchListRepository;
@@ -34,190 +34,284 @@ public class WatchListServiceTests {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
         userId = UUID.randomUUID();
         watchListId = UUID.randomUUID();
-
-        // Setup Data Dummy
-        watchList = new WatchList(
-            userId, 
-            "Inception", 
-            "Movie", 
-            "Sci-Fi", 
-            9, 
-            2010,
-            "Watched", 
-            "Film bagus"
-        );
+        
+        watchList = new WatchList();
         watchList.setId(watchListId);
+        watchList.setUserId(userId);
+        watchList.setTitle("Test Movie");
+        watchList.setStatus("Plan to Watch");
+    }
+
+    // ========================================================================
+    // READ OPERATIONS TESTS
+    // ========================================================================
+
+    @Test
+    void testGetAllWatchLists_WithSearch() {
+        String search = "Test";
+        when(watchListRepository.findByUserIdWithSearch(userId, search)).thenReturn(List.of(watchList));
+
+        List<WatchList> result = watchListService.getAllWatchLists(userId, search);
+
+        assertEquals(1, result.size());
+        verify(watchListRepository).findByUserIdWithSearch(userId, search);
+        // Pastikan method findAll...TIDAK dipanggil
+        verify(watchListRepository, never()).findAllByUserIdOrderByCreatedAtDesc(any());
     }
 
     @Test
-    @DisplayName("Test Read Operations (Get All, By ID, Stats)")
-    void testReadOperations() {
-        // 1. Test getAllWatchLists (Search NULL - Menggunakan OrderByCreatedAtDesc)
+    void testGetAllWatchLists_NoSearch_Null() {
         when(watchListRepository.findAllByUserIdOrderByCreatedAtDesc(userId)).thenReturn(List.of(watchList));
-        List<WatchList> resultNullSearch = watchListService.getAllWatchLists(userId, null);
-        assertFalse(resultNullSearch.isEmpty());
 
-        // [FIX] Test getAllWatchLists (Search KOSONG "" - Harus masuk ke OrderByCreatedAtDesc juga)
-        // Ini menutup gap coverage pada !search.trim().isEmpty()
-        List<WatchList> resultEmptySearch = watchListService.getAllWatchLists(userId, "");
-        assertFalse(resultEmptySearch.isEmpty());
-        
-        List<WatchList> resultSpaceSearch = watchListService.getAllWatchLists(userId, "   ");
-        assertFalse(resultSpaceSearch.isEmpty());
+        List<WatchList> result = watchListService.getAllWatchLists(userId, null);
 
-        // Verifikasi metode repository dipanggil 3 kali (1 untuk null, 1 untuk "", 1 untuk "   ")
-        verify(watchListRepository, times(3)).findAllByUserIdOrderByCreatedAtDesc(userId);
+        assertEquals(1, result.size());
+        verify(watchListRepository).findAllByUserIdOrderByCreatedAtDesc(userId);
+    }
 
+    @Test
+    void testGetAllWatchLists_NoSearch_EmptyString() {
+        when(watchListRepository.findAllByUserIdOrderByCreatedAtDesc(userId)).thenReturn(List.of(watchList));
 
-        // 2. Test getAllWatchLists (Search Ada - Menggunakan findByUserIdWithSearch)
-        when(watchListRepository.findByUserIdWithSearch(userId, "Inception")).thenReturn(List.of(watchList));
-        List<WatchList> resultSearch = watchListService.getAllWatchLists(userId, "Inception");
-        assertFalse(resultSearch.isEmpty());
+        List<WatchList> result = watchListService.getAllWatchLists(userId, "   "); // Whitespace only
 
+        assertEquals(1, result.size());
+        verify(watchListRepository).findAllByUserIdOrderByCreatedAtDesc(userId);
+    }
 
-        // 3. Test getWatchListById
+    @Test
+    void testGetWatchListById_Found() {
         when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
-        WatchList resultId = watchListService.getWatchListById(userId, watchListId);
-        assertNotNull(resultId);
 
+        WatchList result = watchListService.getWatchListById(userId, watchListId);
 
-        // 4. Test getWatchListsByType
-        when(watchListRepository.findByUserIdAndType(userId, "Movie")).thenReturn(List.of(watchList));
-        List<WatchList> resultType = watchListService.getWatchListsByType(userId, "Movie");
-        assertFalse(resultType.isEmpty());
+        assertNotNull(result);
+        assertEquals(watchListId, result.getId());
+    }
 
+    @Test
+    void testGetWatchListById_NotFound() {
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.empty());
 
-        // 5. Test getWatchListsByStatus
-        when(watchListRepository.findByUserIdAndStatus(userId, "Watched")).thenReturn(List.of(watchList));
-        List<WatchList> resultStatus = watchListService.getWatchListsByStatus(userId, "Watched");
-        assertFalse(resultStatus.isEmpty());
+        WatchList result = watchListService.getWatchListById(userId, watchListId);
 
+        assertNull(result);
+    }
 
-        // 6. Test Statistics & Counts
-        when(watchListRepository.findDistinctGenresByUserId(userId)).thenReturn(Arrays.asList("Sci-Fi"));
-        assertNotNull(watchListService.getAllGenres(userId));
+    @Test
+    void testGetWatchListsByType() {
+        String type = "Movie";
+        when(watchListRepository.findByUserIdAndType(userId, type)).thenReturn(List.of(watchList));
 
-        when(watchListRepository.countByGenre(userId)).thenReturn(new ArrayList<>());
-        assertNotNull(watchListService.getGenreStatistics(userId));
+        List<WatchList> result = watchListService.getWatchListsByType(userId, type);
 
-        when(watchListRepository.countByStatusGroup(userId)).thenReturn(new ArrayList<>());
-        assertNotNull(watchListService.getStatusStatistics(userId));
+        assertFalse(result.isEmpty());
+        verify(watchListRepository).findByUserIdAndType(userId, type);
+    }
 
-        when(watchListRepository.countByType(userId)).thenReturn(new ArrayList<>());
-        assertNotNull(watchListService.getTypeStatistics(userId));
+    @Test
+    void testGetWatchListsByStatus() {
+        String status = "Watched";
+        when(watchListRepository.findByUserIdAndStatus(userId, status)).thenReturn(List.of(watchList));
 
+        List<WatchList> result = watchListService.getWatchListsByStatus(userId, status);
 
-        // 7. Test countByStatus (Single count)
+        assertFalse(result.isEmpty());
+        verify(watchListRepository).findByUserIdAndStatus(userId, status);
+    }
+
+    @Test
+    void testGetAllGenres() {
+        when(watchListRepository.findDistinctGenresByUserId(userId)).thenReturn(List.of("Action", "Drama"));
+
+        List<String> result = watchListService.getAllGenres(userId);
+
+        assertEquals(2, result.size());
+        verify(watchListRepository).findDistinctGenresByUserId(userId);
+    }
+
+    @Test
+    void testGetGenreStatistics() {
+        when(watchListRepository.countByGenre(userId)).thenReturn(Collections.emptyList());
+        watchListService.getGenreStatistics(userId);
+        verify(watchListRepository).countByGenre(userId);
+    }
+
+    @Test
+    void testGetStatusStatistics() {
+        when(watchListRepository.countByStatusGroup(userId)).thenReturn(Collections.emptyList());
+        watchListService.getStatusStatistics(userId);
+        verify(watchListRepository).countByStatusGroup(userId);
+    }
+
+    @Test
+    void testGetTypeStatistics() {
+        when(watchListRepository.countByType(userId)).thenReturn(Collections.emptyList());
+        watchListService.getTypeStatistics(userId);
+        verify(watchListRepository).countByType(userId);
+    }
+
+    @Test
+    void testCountByStatus() {
         when(watchListRepository.countByUserIdAndStatus(userId, "Watched")).thenReturn(5L);
         long count = watchListService.countByStatus(userId, "Watched");
         assertEquals(5L, count);
     }
 
-    @Test
-    @DisplayName("Test Create WatchList")
-    void testCreateWatchList() {
-        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArgument(0));
+    // ========================================================================
+    // WRITE OPERATIONS TESTS
+    // ========================================================================
 
-        // Case A: Normal
-        WatchList created = watchListService.createWatchList(userId, "Title", "Movie", "Action", 8, 2024, "Watching", "Note");
+    @Test
+    void testCreateWatchList_WithStatus() {
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        WatchList created = watchListService.createWatchList(userId, "Title", "Movie", "Action", 8, 2020, "Watched", "Note");
+
         assertNotNull(created);
-
-        // Case B: Status Null (Default ke Plan to Watch)
-        WatchList resultNullStatus = watchListService.createWatchList(userId, "Title", "Movie", "Action", 8, 2024, null, "Note");
-        assertEquals("Plan to Watch", resultNullStatus.getStatus());
-
-        // [FIX] Case C: Status Empty String (Default ke Plan to Watch)
-        // Ini menutup gap coverage pada status.isEmpty()
-        WatchList resultEmptyStatus = watchListService.createWatchList(userId, "Title", "Movie", "Action", 8, 2024, "", "Note");
-        assertEquals("Plan to Watch", resultEmptyStatus.getStatus());
+        assertEquals("Watched", created.getStatus());
+        verify(watchListRepository).save(any(WatchList.class));
     }
 
     @Test
-    @DisplayName("Test Update WatchList")
-    void testUpdateWatchList() {
-        // Case A: Sukses
-        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
-        when(watchListRepository.save(any(WatchList.class))).thenReturn(watchList);
+    void testCreateWatchList_StatusNull_Default() {
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
 
-        WatchList updated = watchListService.updateWatchList(userId, watchListId, "New Title", "Series", "Drama", 10, 2025, "Plan to Watch", "New Note");
+        // Status passed is NULL
+        WatchList created = watchListService.createWatchList(userId, "Title", "Movie", "Action", 8, 2020, null, "Note");
+
+        assertNotNull(created);
+        assertEquals("Plan to Watch", created.getStatus()); // Verify logic default value
+    }
+
+    @Test
+    void testCreateWatchList_StatusEmpty_Default() {
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        // Status passed is Empty
+        WatchList created = watchListService.createWatchList(userId, "Title", "Movie", "Action", 8, 2020, "", "Note");
+
+        assertEquals("Plan to Watch", created.getStatus());
+    }
+
+    @Test
+    void testUpdateWatchList_Success() {
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        WatchList updated = watchListService.updateWatchList(
+            userId, watchListId, "New Title", "Series", "Comedy", 9, 2021, "Watching", "New Note"
+        );
+
         assertNotNull(updated);
-        assertEquals("New Title", updated.getTitle()); 
-
-        // Case B: Tidak Ditemukan
-        when(watchListRepository.findByIdAndUserId(eq(UUID.randomUUID()), eq(userId))).thenReturn(Optional.empty());
-        WatchList notFound = watchListService.updateWatchList(userId, UUID.randomUUID(), "Title", "Movie", "Genre", 1, 2000, "Status", "Note");
-        assertNull(notFound);
+        assertEquals("New Title", updated.getTitle());
+        assertEquals("Watching", updated.getStatus());
     }
 
     @Test
-    @DisplayName("Test Delete WatchList")
-    void testDeleteWatchList() {
-        // Case A: Sukses
-        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
-        doNothing().when(watchListRepository).deleteByIdAndUserId(watchListId, userId);
-        
-        boolean result = watchListService.deleteWatchList(userId, watchListId);
-        assertTrue(result);
-
-        // Case B: Gagal (Tidak Ditemukan)
+    void testUpdateWatchList_NotFound() {
         when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.empty());
-        boolean resultFail = watchListService.deleteWatchList(userId, watchListId);
-        assertFalse(resultFail);
+
+        WatchList updated = watchListService.updateWatchList(
+            userId, watchListId, "Title", "Type", "Genre", 1, 2000, "Status", "Note"
+        );
+
+        assertNull(updated);
+        verify(watchListRepository, never()).save(any());
     }
 
     @Test
-    @DisplayName("Test Cycle Status")
-    void testCycleStatus() {
-        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
-        when(watchListRepository.save(any(WatchList.class))).thenReturn(watchList);
-
-        // 1. Plan to Watch -> Watching
-        watchList.setStatus("Plan to Watch");
-        watchListService.cycleStatus(userId, watchListId);
-        assertEquals("Watching", watchList.getStatus());
-
-        // 2. Watching -> Watched
-        watchList.setStatus("Watching");
-        watchListService.cycleStatus(userId, watchListId);
-        assertEquals("Watched", watchList.getStatus());
-
-        // 3. Watched -> Plan to Watch
-        watchList.setStatus("Watched");
-        watchListService.cycleStatus(userId, watchListId);
-        assertEquals("Plan to Watch", watchList.getStatus());
-
-        // 4. Random Status -> Plan to Watch (Else case coverage)
-        watchList.setStatus("Unknown Status");
-        watchListService.cycleStatus(userId, watchListId);
-        assertEquals("Plan to Watch", watchList.getStatus());
-
-        // 5. Data Not Found
-        when(watchListRepository.findByIdAndUserId(eq(UUID.randomUUID()), eq(userId))).thenReturn(Optional.empty());
-        WatchList nullResult = watchListService.cycleStatus(userId, UUID.randomUUID());
-        assertNull(nullResult);
-    }
-
-    @Test
-    @DisplayName("Test Update Cover")
-    void testUpdateCover() {
-        // Case A: Sukses Found
+    void testUpdateCover_Success() {
+        // Perhatikan: updateCover menggunakan findById (generic), bukan findByIdAndUserId
         when(watchListRepository.findById(watchListId)).thenReturn(Optional.of(watchList));
-        when(watchListRepository.save(any(WatchList.class))).thenReturn(watchList);
 
-        watchListService.updateCover(watchListId, "new-cover.jpg");
-        assertEquals("new-cover.jpg", watchList.getCover());
-        verify(watchListRepository, times(1)).save(watchList);
+        watchListService.updateCover(watchListId, "new_cover.jpg");
 
-        // [FIX] Case B: Not Found (Null)
-        // Ini menutup gap coverage pada if(watchList != null)
-        UUID randomId = UUID.randomUUID();
-        when(watchListRepository.findById(randomId)).thenReturn(Optional.empty());
-        
-        watchListService.updateCover(randomId, "fail.jpg");
-        // Verifikasi bahwa save TIDAK dipanggil lagi (total tetap 1 dari case A)
-        verify(watchListRepository, times(1)).save(any());
+        assertEquals("new_cover.jpg", watchList.getCover());
+        verify(watchListRepository).save(watchList);
+    }
+
+    @Test
+    void testUpdateCover_NotFound() {
+        when(watchListRepository.findById(watchListId)).thenReturn(Optional.empty());
+
+        watchListService.updateCover(watchListId, "new_cover.jpg");
+
+        verify(watchListRepository, never()).save(any());
+    }
+
+    @Test
+    void testDeleteWatchList_Success() {
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
+
+        boolean result = watchListService.deleteWatchList(userId, watchListId);
+
+        assertTrue(result);
+        verify(watchListRepository).deleteByIdAndUserId(watchListId, userId);
+    }
+
+    @Test
+    void testDeleteWatchList_NotFound() {
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.empty());
+
+        boolean result = watchListService.deleteWatchList(userId, watchListId);
+
+        assertFalse(result);
+        verify(watchListRepository, never()).deleteByIdAndUserId(any(), any());
+    }
+
+    @Test
+    void testCycleStatus_NotFound() {
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.empty());
+
+        WatchList result = watchListService.cycleStatus(userId, watchListId);
+
+        assertNull(result);
+    }
+
+    @Test
+    void testCycleStatus_PlanToWatching() {
+        watchList.setStatus("Plan to Watch");
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        WatchList result = watchListService.cycleStatus(userId, watchListId);
+
+        assertEquals("Watching", result.getStatus());
+    }
+
+    @Test
+    void testCycleStatus_WatchingToWatched() {
+        watchList.setStatus("Watching");
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        WatchList result = watchListService.cycleStatus(userId, watchListId);
+
+        assertEquals("Watched", result.getStatus());
+    }
+
+    @Test
+    void testCycleStatus_WatchedToPlan() {
+        watchList.setStatus("Watched");
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        WatchList result = watchListService.cycleStatus(userId, watchListId);
+
+        assertEquals("Plan to Watch", result.getStatus());
+    }
+
+    @Test
+    void testCycleStatus_UnknownToPlan() {
+        watchList.setStatus("Unknown Status"); // Masuk ke "else" terakhir
+        when(watchListRepository.findByIdAndUserId(watchListId, userId)).thenReturn(Optional.of(watchList));
+        when(watchListRepository.save(any(WatchList.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        WatchList result = watchListService.cycleStatus(userId, watchListId);
+
+        assertEquals("Plan to Watch", result.getStatus());
     }
 }
